--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,309 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header_container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.lift_side_container {
+  width: 60%;
+  height: 580px;
+  background-color: white;
+  padding: 20px 30px 0 80px;
+  box-sizing: border-box;
+  margin-bottom: 0;
+}
+.right_side_container {
+  width: 45%;
+  height: 580px;
+}
+.lift_side_container_top_one {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.top_logo {
+  margin-top: 30px;
+  height: 100px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.top_name {
+  cursor: pointer;
+  margin-top: 32px;
+  height: 40px;
+  line-height: 39px;
+  min-width: 90px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid #535665;
+  padding: 0 0px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.top_name a {
+  color: #2b1e16;
+  text-decoration: none;
+  padding: 10px 13px;
+}
+.top_name:hover {
+  background-color: #7e808c;
+  color: white;
+  border: none;
+}
+.top_name:hover a {
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.top_two_h1 {
+  color: #282c3f;
+  margin-top: 25px;
+  margin-bottom: 0;
+  font-size: 30px;
+  font-weight: 600;
+  letter-spacing: -0.45px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.top_two_p {
+  font-size: 20px;
+  font-weight: 300;
+  width: 600px;
+  margin-top: 10px;
+  margin-bottom: 0;
+  line-height: 40px;
+  letter-spacing: -0.3px;
+  color: #686b78;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.search_bar_container {
+  display: flex;
+  width: 70%;
+  justify-content: space-between;
+}
+.search_bar_container {
+  margin-top: 40px;
+  padding: 18px 5px;
+  border: 1px solid #bebfc5;
+  box-shadow: none;
+  margin-right: 0;
+  padding-left: 0;
+}
+.search_bar_one input {
+  padding-left: 15px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #7e808c;
+  border: none;
+  outline: none;
+  padding-right: 0;
+  margin-right: 0;
+  padding-top: 4px;
+}
+.search_bar_one button {
+  box-sizing: border-box;
+  /* padding-left: 120px; */
+  font-weight: 400;
+  font-size: 12px;
+  cursor: pointer;
+  letter-spacing: -0.35px;
+  color: #676872;
+  border: none;
+  outline: none;
+  margin-right: 0;
+  justify-content: end;
+  background-color: white;
+  padding-top: 5px;
+}
+.search_bar_one span {
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 0.53px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+  color: white;
+}
+.search_bar_three {
+  margin-top: 40px;
+  padding: 20px 30px;
+  text-align: center;
+  background-color: #fc8019;
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 0.53px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+  color: white;
+  cursor: pointer;
+}
+.top_p {
+  font-weight: 400;
+  font-size: 15px;
+  color: #a9abb2;
+  margin: 30px 0 10px;
+  letter-spacing: -0.2px;
+  text-transform: uppercase;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.top_ul ul {
+  list-style: none;
+  justify-content: flex-start;
+  display: flex;
+  /* width: 60%; */
+  padding-left: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+.top_ul li {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  font-weight: 600;
+  font-size: 15px;
+  margin-right: 8px;
+  color: #686b78;
+  line-height: 1.5;
+  letter-spacing: -0.3px;
+  padding: 5px 1.5px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.body_one {
+  background: #2b1e16;
+  width: 100%;
+  height: 400px;
+  justify-content: center;
+  text-align: center;
+  padding: 0 60px;
+  box-sizing: border-box;
+}
+.body_one_container {
+  display: flex;
+  gap: 70px;
+}
+.body_one_content h1 {
+  margin-top: 25px;
+  font-size: 20px;
+  font-weight: 600;
+  color: white;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.body_one_content p {
+  font-size: 15px;
+  font-weight: 256;
+  margin-top: 10px;
+  line-height: 1.3;
+  color: white;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.body_two {
+  width: 100%;
+  height: 400px;
+  background-color: white;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+  padding-left: 0px;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.body_two h1 {
+  margin-left: 60px;
+  font-size: 35px;
+  font-weight: 600;
+  width: 300px;
+  line-height: 1;
+  letter-spacing: -0.45px;
+  color: #282c3f;
+}
+.body_two p {
+  margin-left: 60px;
+  font-size: 18px;
+  width: 400px;
+  font-weight: 300;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  color: #7e808c;
+  line-height: 1.2;
+  padding-top: 0;
+}
+.footer {
+  background-color: black;
+  width: 100%;
+  /* height: 590px; */
+  box-sizing: border-box;
+  padding: 65px 50px 0px 100px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.footer_container {
+  display: flex;
+  gap: 70px;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+.footer_head {
+  color: gray;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+.footer_item {
+  color: white;
+  font-weight: 200;
+  padding: 11px 0;
+  font-size: 15px;
+}
+.footer_two {
+  background-color: black;
+  width: 100%;
+  /* height: 340px; */
+  box-sizing: border-box;
+  padding: 5px 50px 30px 100px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.footer_two h4 {
+  color: gray;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.footer_two_container {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+.footer_two_item {
+  color: white;
+  font-weight: 200;
+  padding: 10px 0;
+  font-size: 15px;
+  margin-right: 80px;
+}
+.footer_three {
+  box-sizing: border-box;
+  background-color: black;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 0px 50px 30px 100px;
+  font-family: ProximaNova, arial, Helvetica Neue, sans-serif;
+}
+.footer_three h4 {
+  color: gray;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: 600;
+  box-sizing: border-box;
+  margin-top: 0;
+  padding: 0;
+}
+.footer_three_item {
+  color: white;
+  font-weight: 200;
+  padding: 10px 0;
+  font-size: 15px;
+  margin-top: 0px;
+  padding-bottom: 0;
+  box-sizing: border-box;
+  margin-bottom: 30px;
+  margin-right: 50px;
+}
+.footer_last_item {
+  color: white;
+  font-weight: 200;
+  padding: 12px 0;
+  font-size: 17px;
+  justify-content: center;
+  box-sizing: border-box;
+  margin-right: 50px;
 }
